<resources>
    <string name="app_name">Kaspresso Sample</string>
    <string name="main_screen_title">Main Screen</string>
    <string name="main_screen_simple_fragment_button">Simple fragment</string>
    <string name="main_screen_webview_button">WebView</string>
    <string name="main_screen_scroll_view_sample_button">Flaky sample</string>
    <string name="main_screen_continuously_sample_button">Continuously sample</string>
    <string name="main_screen_complex_compose_sample_button">Complex compose sample</string>
    <string name="main_screen_idlewaiting_sample_button">Waiting for idle sample</string>
    <string name="main_screen_measure_sample_button">Measure sample</string>
    <string name="main_screen_jetpack_compose_button">Jetpack Compose samples</string>
    <string name="main_screen_shared_test">Shared Test with Robolectric sample</string>
    <string name="system_dialogs_sanity">System dialogs sanity</string>
    <string name="main_screen_device_button">Device Sample</string>
    <string name="main_screen_full_device_button">Full Window Device Sample</string>
    <string name="main_screen_system_dialogs_button">System Dialogs Sample</string>
    <string name="main_screen_change_language_mid_test_button">Change locale mid-test</string>
    <string name="main_screen_activity_with_toolbar_button">Activity with toolbar</string>
    <string name="main_screen_activity_with_mixed_views">Activity with mixed views</string>
    <string name="main_screen_activity_with_compose_views">Activity with Compose views</string>
    <string name="autoscroll_scrollview_with_padding_title">Auto scroll ScrollView with padding</string>
    <string name="simple_fragment_title">Simple Fragment</string>
    <string name="simple_fragment_text_button_1">Button 1</string>
    <string name="simple_fragment_text_button_2">Button 2</string>
    <string name="simple_fragment_text_edittext">Some text</string>
    <string name="measure_fragment_title" translatable="false">Measure Fragment</string>
    <string name="measure_fragment_text_button_1" translatable="false">BUTTON 1</string>
    <string name="measure_fragment_text_button_2" translatable="false">BUTTON 2</string>
    <string name="measure_fragment_text_textview" translatable="false">Button_2 clicks count = </string>
    <string name="measure_fragment_text_edittext" translatable="false">Some text</string>
    <string name="measure_fragment_text_checkbox" translatable="false">Checkbox</string>
    <string name="mixed_fragment_title" translatable="false">Mixed Fragment</string>
    <string name="mixed_fragment_text_button_1" translatable="false">BUTTON 1</string>
    <string name="mixed_fragment_text_button_2" translatable="false">BUTTON 2</string>
    <string name="mixed_fragment_text_textview" translatable="false">Button_2 clicks count = </string>
    <string name="mixed_fragment_text_edittext" translatable="false">Some text</string>
    <string name="mixed_fragment_text_checkbox" translatable="false">Checkbox</string>
    <string name="device_sample_title" translatable="false">Device Sample</string>
    <string name="device_sample_accessibility_service_title" translatable="false">Kaspresso Sample Accessibility Service</string>
    <string name="device_sample_input_hint" translatable="false">Type text here…</string>
    <string name="device_request_permission" translatable="false">Request Permission</string>
    <string name="device_full_title">Device Full</string>
    <string name="device_full_start">START</string>
    <string name="device_full_end">END</string>
    <string name="device_full_show_dialog">SHOW DIALOG</string>
    <string name="increment">Increment</string>
    <string name="decrement">Decrement</string>
    <string name="change_color_to_black">Set background to black</string>
    <string name="change_color_to_red">Set background to red</string>
    <string name="counter_value">Current value: %d</string>
    <string name="common_flaky_final_textview" translatable="false">TextView</string>
    <string name="common_flaky_final_button" translatable="false">BUTTON</string>
    <string name="common_flaky_start_1" translatable="false">1</string>
    <string name="common_flaky_start_2" translatable="false">2</string>
    <string name="common_flaky_start_3" translatable="false">3</string>
    <string name="common_flaky_start_4" translatable="false">4</string>
    <string name="common_flaky_start_5" translatable="false">5</string>
    <string name="common_flaky_start_6" translatable="false">6</string>
    <string name="continuously_start_button" translatable="false">Start some work with the success dialog at the end</string>
    <string name="continuously_dialog_title" translatable="false">Some work finished</string>
    <string name="upgrade_title" translatable="false">Upgrade scenario</string>
    <string name="upgrade_version_placeholder" translatable="false">v.%s</string>
    <string name="upgrade_value_placeholder" translatable="false">Current value is: %s</string>
    <string name="upgrade_label_value" translatable="false">Value</string>
    <string name="upgrade_value_input_hint" translatable="false">Type new value here</string>
    <string name="upgrade_apply_button" translatable="false">Apply</string>
    <string name="compose_screen_title" translatable="false">Complex compose screen</string>
    <string name="compose_screen_button_start" translatable="false">Start</string>
    <string name="compose_screen_button_stage_1" translatable="false">Stage #1</string>
    <string name="compose_screen_button_stage_2" translatable="false">Stage #2</string>
    <string name="compose_screen_button_finish" translatable="false">Finish</string>
    <string name="compose_screen_dialog_title_1" translatable="false">Dialog #1</string>
    <string name="compose_screen_dialog_title_2" translatable="false">Dialog #2</string>
    <string name="compose_screen_dialog_message" translatable="false">Some unexpected text</string>
    <string name="compose_screen_dialog_pos_button" translatable="false">OK</string>
    <string name="idlewaiting_fragment_title" translatable="false">Wait for idle Fragment</string>
    <string name="idlewaiting_fragment_text_edittext" translatable="false">Some text</string>
    <string name="change_locale_screen_text">For en locale the value is 123</string>
    <string name="screen_with_toolbar" translatable="false">Screen with toolbar</string>
    <string name="toolbar_title" translatable="false">toolbar title</string>
    <string name="toolbar_layout_title" translatable="false">toolbar layout title</string>
</resources>