<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main_scroll_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/activity_main_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_screen_title"
            android:textSize="18pt" />

        <Button
            android:id="@+id/activity_main_auto_scroll_scrollView_with_padding_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/autoscroll_scrollview_with_padding_title" />

        <Button
            android:id="@+id/activity_main_simple_sample_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/main_screen_simple_fragment_button" />

        <Button
            android:id="@+id/activity_main_webview_sample_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/main_screen_webview_button" />

        <Button
            android:id="@+id/activity_main_flaky_sample_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/main_screen_scroll_view_sample_button" />


        <Button
            android:id="@+id/activity_main_continuously_sample_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/main_screen_continuously_sample_button" />

        <Button
            android:id="@+id/activity_main_system_dialogs_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/main_screen_system_dialogs_button" />

        <Button
            android:id="@+id/activity_main_upgrade_scenario_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/upgrade_title" />

        <Button
            android:id="@+id/activity_main_complex_compose_sample_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/main_screen_complex_compose_sample_button" />

        <Button
            android:id="@+id/activity_main_idlewaiting_sample_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/main_screen_idlewaiting_sample_button" />

        <Button
            android:id="@+id/activity_main_measure_sample_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/main_screen_measure_sample_button" />

        <Button
            android:id="@+id/activity_main_device_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/main_screen_device_button" />

        <Button
            android:id="@+id/activity_main_device_full_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/main_screen_full_device_button" />


        <Button
            android:id="@+id/activity_main_change_locale_mid_test_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/main_screen_change_language_mid_test_button" />

        <Button
            android:id="@+id/activity_with_toolbar_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/main_screen_activity_with_toolbar_button" />

        <Button
            android:id="@+id/activity_with_mixed_views_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/main_screen_activity_with_mixed_views" />

        <Button
            android:id="@+id/activity_compose_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/main_screen_activity_with_compose_views" />

        <TextView
            android:id="@+id/activity_main_description_textview"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/main_screen_title" />
    </LinearLayout>

</ScrollView>
